--- a/config/default.conf
+++ b/config/default.conf
@@ -3,4 +3,35 @@ server {
 	host 127.0.0.1;
 	root fusion_web/;
 	index siege.html;
+	location {
+		sans
+	}
+	location {
+		sans
+	}
+}
+
+server {
+	listen 8002;
+	host 127.0.0.1;
+	root fusion_web/;
+	index siege.html;
+	location {
+		sans
+	}
+	location {
+		sans
+	}
+	location {
+		sans
+	}
+	location {
+		sans
+	}
+	location {
+		sans
+	}
+	location {
+		sans
+	}
 }
