--- a/config/default.conf
+++ b/config/default.conf
@@ -1,8 +1,8 @@
 server {
 	listen 8002;
 	host 127.0.0.1;
-	root fusion_web/;
-	index siege.html;
+	root www/;
+	index index.html;
 	location {
 		sans
 	}
