--- a/config/default.conf
+++ b/config/default.conf
@@ -24,9 +24,9 @@ server {
 
     location /cgi-bin {
         root ./;
-        allow_methods GET POST #DELETE;
+        allow_methods GET POST DELETE;
         index time.py;
         cgi_path /usr/bin/python3 /bin/bash;
-        cgi_ext .py .sh;
+        cgi_ext .py .sh
     }
 }
