--- a/config/default.conf
+++ b/config/default.conf
@@ -6,6 +6,8 @@ server {
     client_max_body_size 3000000;
 	index index.html;
     error_page 404 error_pages/404.html;
+    error_page 409 error_pages/404.html;
+    error_page 402 error_pages/404.html;
 
     location / {
         allow_methods  DELETE POST GET;
@@ -24,7 +26,7 @@ server {
 
     location /cgi-bin {
         root ./;
-        allow_methods GET POST #DELETE;
+        allow_methods GET POST DELETE;
         index time.py;
         cgi_path /usr/bin/python3 /bin/bash;
         cgi_ext .py .sh;
