--- a/config/default.conf
+++ b/config/default.conf
@@ -7,24 +7,28 @@ server {
 	index index.html;
     error_page 404 error_pages/404.html;
     error_page 409 error_pages/404.html;
-    error_page 402 error_pages/404.html;
+    error_page 402 error_pages/sans.html;
 
-    location / {
+    location {
+		path /;
         allow_methods  DELETE POST GET;
         autoindex off;
     }
     
-    location /tours {
+    location {
+		path rawr/;
         autoindex on;
         index tours1.html;
         allow_methods GET POST PUT HEAD;
 	}
 
-	location /red {
+	location {
+		path red/;
 		return /tours;
 	}
 
-    location /cgi-bin {
+    location {
+		path cgi-bin/;
         root ./;
         allow_methods GET POST DELETE;
         index time.py;
