re-refactor of run, setting up GET and POST methods in server class, adding more pages. Still no CGI handling, files fail to upload and simply curling crashes everything

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,6 +1,26 @@
 server {
-	listen 8000;
-	host 127.0.0.1;
-	root www/;
-	index index.html;
+    listen 8000;
+    host 127.0.0.1;
+    root www/;
+    index index.html;
+
+    location / {
+        methods GET;
+        index index.html;
+    }
+
+    location /pages/ {
+        methods GET;
+        root www/pages/;
+    }
+
+    location /upload {
+        methods POST;
+        upload_store /uploads/;
+    }
+
+    location /cgi-bin/ {
+        methods GET POST;
+        cgi_pass resources/minishell;
+    }
 }
