--- a/config/default.conf
+++ b/config/default.conf
@@ -5,7 +5,7 @@ server {
     index index.html;
 
     location / {
-        methods GET;
+        methods GET DELETE;
         index index.html;
     }
 
