CGI working surprisingly

--- a/config/default.conf
+++ b/config/default.conf
@@ -21,6 +21,6 @@ server {
 
     location /cgi-bin/ {
         methods GET POST;
-        cgi_pass resources/minishell;
-    }
+        root www/cgi-bin/;
+	}
 }
