Manual merge with Jacob's changes.

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,9 +1,5 @@
 server {
-<<<<<<< HEAD
-    listen 1234;
-=======
     listen 8000;
->>>>>>> master
     host 127.0.0.1;
     root www/;
     index index.html;
@@ -18,7 +14,7 @@ server {
         root www/pages/;
     }
 
-    location /upload {
+    location /upload/ {
         methods POST;
         upload_store /uploads/;
     }
@@ -27,8 +23,4 @@ server {
         methods GET POST;
         root www/cgi-bin/;
 	}
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> master
