Added max_body to the config files. Server max_body can be overwritten by location dirrective, if not specified, the value will be set to the default of the server

--- a/config/default.conf
+++ b/config/default.conf
@@ -3,10 +3,12 @@ server {
     host 127.0.0.1;
     root www/;
     index index.html;
+	max_body 10000;
 
     location / {
         methods GET DELETE;
         index index.html;
+		max_body 1500;
     }
 
     location /pages/ {
@@ -17,6 +19,7 @@ server {
     location /upload {
         methods POST;
         upload_store /uploads/;
+		max_body 250;
     }
 
     location /cgi-bin/ {
