Does not print debug statements anymore. I am just commiting, because I can't checkout otherwise

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,29 +1,28 @@
 server {
-    listen 8000;
-    host 127.0.0.1;
-    root www/;
-    index index.html;
-	max_body 10000;
+	listen 8000;
+	host 127.0.0.1;
+	root www/;
+	index index.html;
 
-    location / {
-        methods GET DELETE;
-        index index.html;
+	location / {
+		methods GET DELETE;
+		index index.html;
 		max_body 1500;
-    }
+	}
 
-    location /pages/ {
-        methods GET;
-        root www/pages/;
-    }
+	location /pages/ {
+		methods GET;
+		root www/pages/;
+	}
 
-    location /upload {
-        methods POST;
-        upload_store /uploads/;
+	location /uploads/ {
+		methods POST;
+		upload_store /uploads/;
 		max_body 250;
-    }
+	}
 
-    location /cgi-bin/ {
-        methods GET POST;
-        root www/cgi-bin/;
+	location /cgi-bin/ {
+		methods GET POST;
+		root www/cgi-bin/;
 	}
 }
