--- a/config/default.conf
+++ b/config/default.conf
@@ -1,26 +1,32 @@
 server {
-    listen 8000;
-    host 127.0.0.1;
-    root www/;
-    index index.html;
+	listen 8000;
+	host 127.0.0.1;
+	root www/;
+	index index.html;
 
-    location / {
-        methods GET DELETE;
-        index index.html;
-    }
+	location / {
+		methods GET DELETE;
+		index index.html;
+		max_body 1500;
+	}
 
-    location /pages/ {
-        methods GET;
-        root www/pages/;
-    }
+	location /pages/ {
+		methods GET;
+		root www/pages/;
+	}
 
+	location /uploads/ {
+		methods POST;
+		upload_store /uploads/;
+		max_body 250;
+	}
     location /upload/ {
         methods POST;
         upload_store /uploads/;
     }
 
-    location /cgi-bin/ {
-        methods GET POST;
-        root www/cgi-bin/;
+	location /cgi-bin/ {
+		methods GET POST;
+		root www/cgi-bin/;
 	}
 }
