--- a/config/default.conf
+++ b/config/default.conf
@@ -1,5 +1,6 @@
 server {
-	listen 8000;
+	server_name localhost
+	listen 8080;
 	host 127.0.0.1;
 	root www/;
 	index index.html;
@@ -37,5 +38,5 @@ server {
 	host 127.0.0.1;
 	root www/;
 	index style.css;
-	timeout 5;
+	timeout 10;
 }
