a few tweaks, merging with Jacob

--- a/config/default.conf
+++ b/config/default.conf
@@ -2,12 +2,10 @@ server {
 	listen 8000;
 	host 127.0.0.1;
 	root www/;
-	index index.html;
+	index pages/index.html;
 	timeout 10;
 
 	location / {
-		methods GET DELETE;
-		index index.html;
 		max_body 1500;
 	}
 
@@ -17,14 +15,10 @@ server {
 	}
 
 	location /uploads/ {
-		methods POST;
+		methods POST DELETE;
 		upload_store /uploads/;
 		max_body 250;
 	}
-    location /upload/ {
-        methods POST;
-        upload_store /uploads/;
-    }
 
 	location /cgi-bin/ {
 		methods GET POST;
@@ -35,7 +29,6 @@ server {
 server {
 	listen 9000;
 	host 127.0.0.1;
-	root www/;
-	index style.css;
-	timeout 10;
+	root testing/;
+	index wow.txt;
 }
