--- a/config/default.conf
+++ b/config/default.conf
@@ -6,21 +6,22 @@ server {
 	timeout 10;
 
 	location / {
+		methods GET;
 		max_body 1500;
 	}
 
-	location /pages/ {
+	location pages/ {
 		methods GET;
 		root www/pages/;
 	}
 
-	location /uploads/ {
-		methods POST DELETE;
+	location uploads/ {
+		methods GET POST DELETE;
 		upload_store /uploads/;
 		max_body 250;
 	}
 
-	location /cgi-bin/ {
+	location cgi-bin/ {
 		methods GET POST;
 		root www/cgi-bin/;
 	}
