--- a/config/default.conf
+++ b/config/default.conf
@@ -1,9 +1,14 @@
 server {
-	listen 8000;
+	listen 8080;
 	host 127.0.0.1;
 	root www/;
 	index pages/index.html;
 	timeout 10;
+	error_page 400 error_pages/400.html;
+	error_page 403 error_pages/403.html;
+	error_page 405 error_pages/405.html;
+	error_page 500 error_pages/500.html;
+
 
 	location / {
 		methods GET;
@@ -18,6 +23,7 @@ server {
 	location uploads/ {
 		methods GET POST DELETE;
 		upload_store /uploads/;
+		timeout 2;
 		max_body 250;
 	}
 
@@ -25,11 +31,4 @@ server {
 		methods GET POST;
 		root www/cgi-bin/;
 	}
-}
-
-server {
-	listen 9000;
-	host 127.0.0.1;
-	root testing/;
-	index wow.txt;
 }
