--- a/config/default.conf
+++ b/config/default.conf
@@ -1,28 +1,26 @@
 server {
 	listen 8000;
-	host 10.12.4.2;
+	host 127.0.0.1;
 	root www/;
 	index pages/index.html;
 	timeout 10;
 
 	location / {
 		methods GET;
-		max_body 1500;
 	}
 
 	location pages/ {
 		methods GET;
-		root www/pages/;
 	}
 
 	location uploads/ {
 		methods GET POST DELETE;
-		max_body 250;
+		max_body 10000000;
 	}
 
 	location cgi-bin/ {
 		methods GET POST;
-		root www/cgi-bin/;
+		cgi-path cgi-bin/;
 	}
 }
 
