--- a/config/default.conf
+++ b/config/default.conf
@@ -6,6 +6,7 @@ server {
 	timeout 10;
 	error_page 400 error_pages/400.html;
 	error_page 403 error_pages/403.html;
+	error_page 404 error_pages/404.html;
 	error_page 405 error_pages/405.html;
 	error_page 500 error_pages/500.html;
 
@@ -22,13 +23,12 @@ server {
 
 	location uploads/ {
 		methods GET POST DELETE;
-		upload_store /uploads/;
-		timeout 2;
-		max_body 250;
+		upload_store uploads/;
 	}
 
 	location cgi-bin/ {
 		methods GET POST;
 		root www/cgi-bin/;
+		cgi megaphone.cgi;
 	}
 }
