--- a/config/default.conf
+++ b/config/default.conf
@@ -8,6 +8,7 @@ server {
 	error_page 403 error_pages/403.html;
 	error_page 404 error_pages/404.html;
 	error_page 405 error_pages/405.html;
+	error_page 413 error_pages/413.html;
 	error_page 500 error_pages/500.html;
 
 
@@ -17,8 +18,8 @@ server {
 	}
 
 	location pages/ {
-		methods GET;
 		root www/pages/;
+		methods GET;
 	}
 
 	location uploads/ {
