Added the return functionality (likely not impossible to break, need to look into it) and the index functionality for the Get method, maybe not necessary for POST and DELETE, we'll see...

--- a/config/default.conf
+++ b/config/default.conf
@@ -13,13 +13,15 @@ server {
 
 
 	location / {
+		index pages/index.html;
 		methods GET;
 		max_body 1500;
 	}
 
 	location pages/ {
-		root www/pages/;
+		index index.html;
 		methods GET;
+		return /rawr/ /tickle/ /pickle/;
 	}
 
 	location uploads/ {
@@ -27,8 +29,8 @@ server {
 	}
 
 	location cgi-bin/ {
+		index secret.html;
 		methods GET POST;
-		root www/cgi-bin/;
-		cgi megaphone.cgi;
+		cgi script.cgi;
 	}
 }
