--- a/config/default.conf
+++ b/config/default.conf
@@ -4,6 +4,7 @@ server {
 	root www/;
 	index pages/index.html;
 	timeout 10;
+	error_page 201 pages/upload_success.html;
 	error_page 400 error_pages/400.html;
 	error_page 403 error_pages/403.html;
 	error_page 404 error_pages/404.html;
