--- a/config/default.conf
+++ b/config/default.conf
@@ -1,4 +1,4 @@
-server {
+server sans_server {
 	listen 8080;
 	host 127.0.0.1;
 	root www/;
@@ -11,6 +11,7 @@ server {
 	error_page 405 error_pages/405.html;
 	error_page 413 error_pages/413.html;
 	error_page 500 error_pages/500.html;
+	error_page 504 error_pages/504.html;
 
 
 	location / {
