--- a/config/default.conf
+++ b/config/default.conf
@@ -1,5 +1,5 @@
 server sans_server {
-	listen 8080;
+	listen 8090;
 	host 127.0.0.1;
 	root www/;
 	index pages/index.html;
@@ -35,4 +35,9 @@ server sans_server {
 		root www/cgi-bin/;
 		cgi .sh .py;
 	}
+}
+
+server sans_server {
+	host 127.0.0.1;
+	listen 8090;
 }
