--- a/config/default.conf
+++ b/config/default.conf
@@ -1,5 +1,5 @@
 server sans_server {
-	listen 8090;
+	listen 8000;
 	host 127.0.0.1;
 	root www/;
 	index pages/index.html;
@@ -21,11 +21,12 @@ server sans_server {
 
 	location pages/ {
 		methods GET;
-		return /rawr/ /tickle/ /pickle/;
+		index index.html;
+		return /one two/ three /four/;
 	}
 
 	location uploads/ {
-		max_body 5000000;
+		max_body 177000;
 		methods GET POST DELETE;
 	}
 
