Nevermind. Its 99% perfect but: body size should be checked BEFORE the entire file is processed and stopped if exceeded then, AND the timeout in the socket manager just doesnt work anymore. Fix these, we win.

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,6 +1,7 @@
+# Default Webserv configuration with sample website and CGI!
 server default {
-	host 127.0.0.1;
-	listen 8000;
+	host 127.0.0.1; # Make 0.0.0.0 for public IP on cloud server.
+	listen 8000; # Make 80 on cloud server, default HTTP port.
 	root www/;
 	index pages/index.html;
 	timeout 5;
@@ -38,7 +39,10 @@ server default {
 	}
 }
 
+# Empty page server for stress-testing.
 server siege_testing {
 	host 127.0.0.1;
 	listen 9000;
+	root testing/;
+	index empty.html;
 }
