final cleanup post-finish

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,3 +1,5 @@
+#### DEFAULT CONFIG FILE - USED WITH BASIC LAUNCH ####
+
 # Default Webserv configuration with sample website and CGI!
 server default {
 	host 127.0.0.1; # Make 0.0.0.0 for public IP on cloud server.
@@ -39,7 +41,7 @@ server default {
 	}
 }
 
-# Empty page server for stress-testing.
+# Empty page server for stress-testing. (Ignored in repo!)
 server siege_testing {
 	host 127.0.0.1;
 	listen 9000;
